--- a/index.html
+++ b/index.html
@@ -227,16 +227,18 @@
 
 
 <div class='text'>
-	<h2>Jennifer Smith</h2>	
+	<h2>by Jennifer Smith</h2>	
 
-	The terms “standard” and “jazz standard” are often used when one is referring to popular and jazz music compositions and the definitions of these terms can vary widely. So what is a standard? Comparing definitions from a number of dictionaries and music scholars and basing a definition on the points on which they are in agreement, it is reasonable to state: A “standard” is a composition that is held in continuing esteem and is commonly used in musical repertoires. And, A “jazz standard” is a composition that is held in continuing esteem and is commonly used as the basis of jazz arrangements and improvisations. 
+	What is a jazz standard? The terms “standard” and “jazz standard” are often used when referring to popular and jazz music compositions. Comparing definitions from a number of dictionaries and music scholars and basing a definition based on general agreement, it is reasonable to state: A “standard” is a composition that is held in continuing esteem and is commonly used in musical repertoires and as the basis of jazz arrangements and improvisations. 
 
-Sometimes the term “jazz standard” is used to imply a jazz composition that has become a standard with general acceptance, one that allows compositions from any origin. For example, consider the following sheet music collection titled "Jazz Standards":
+Sometimes the term “jazz standard” is used because the composition has gained general acceptance, regardless of origin. For example, consider the following sheet music collection titled "Jazz Standards":
 <br>
 <p style="margin-left: 70px">All the Things You Are, Autumn in New York, Bewitched, Cry Me a River, Don’t Get Around Much Anymore, A Fine Romance, I Can’t Get Started With You, I’ve Got You Under My Skin, The Lady Is a Tramp, Manhattan, Misty, My Funny Valentine, Old Devil Moon, Prelude to a Kiss, Route 66, Smoke Gets in Your Eyes, There’s a Small Hotel</p>
 
 
-The majority of these “jazz standards” were not originally jazz compositions. When music publishers include the term “jazz standards” in a description or title they almost always are referring to compositions used as the foundation for jazz arrangements or improvisations, regardless of whether or not they were written by a jazz composer. In general, music authors and theorists also favor this broader definition. 
+The majority of these “jazz standards” were not originally jazz compositions. When music publishers include the term “jazz standards” in a description or title they are usually referring to compositions used as the foundation for jazz arrangements or improvisations, regardless of whether or not they were written by a jazz composer. In general, music authors and theorists also favor this broader definition. Using this definition and data from jazzstandards.com, you will see highlights from 1000 jazz compositions, ranked by popularity. Some of the notes here are derived from jazzstandards.com and Wikipedia.<p>
+
+	The data 
 </div>
 
 
@@ -253,7 +255,7 @@ The majority of these “jazz standards” were not originally jazz compositions
 </div>
 <!-- caption for image 1 -->
 <div class='center_aligner'>
-	<div class='caption'>Jazz standards peaked in the two decades between 1927 to 1947. The greatest number composed and recorded are ranked in popularity. The rise of Broadway musicals during this time was the biggest contributor to the popularity of jazz standards.</div>	
+	<div class='caption'>Jazz standards peaked in the two decades between 1927 to 1947. The rise of Broadway musicals during this time was the biggest contributor to the popularity of jazz standards.</div>	
 </div>
 
 
@@ -265,7 +267,7 @@ The majority of these “jazz standards” were not originally jazz compositions
 <div class='center_aligner'>
 <div class='text'>
 	<h1>Richard Rodgers, #1 Jazz Standards Composer</h1>
-	Richard Charles Rodgers was an American composer, known largely for his work in musical theater. With 43 Broadway musicals and over 900 songs to his credit, Rodgers was one of the most significant American composers of the 20th century, and his compositions had a significant impact on popular music. Lorenz Milton Hart was the lyricist half of the Broadway songwriting team Rodgers and Hart. Some of his more famous lyrics include "Blue Moon", "The Lady Is a Tramp", "Manhattan", "Bewitched, Bothered and Bewildered", and "My Funny Valentine". Here are his compositions over time, with the song ranking (1-1000) appearing on the right.
+	Richard Rodgers was an American composer, known largely for his work in musical theater. With 43 Broadway musicals and over 900 songs to his credit, Rodgers was one of the most significant American composers of the 20th century, and his compositions had a significant impact on popular music. Lorenz Milton Hart was the lyricist for most of Rodgers compositions and half of the Broadway songwriting team Rodgers and Hart. Some of his more famous lyrics include "Blue Moon", "The Lady Is a Tramp", "Manhattan", "Bewitched, Bothered and Bewildered", and "My Funny Valentine". Here are Rodgers compositions over time, with the song ranking (1-1000) appearing on the right.
 </div></div>
 
 
@@ -280,18 +282,18 @@ The majority of these “jazz standards” were not originally jazz compositions
 <div class='center_aligner'>
 <div class='text'>
 	<h1>Which composers also wrote the lyrics?</h1>
-	A song is a miniature drama — a short story told to music. The notes may stir the soul, but it's the lyrics that pierce the heart.
+	A song is drama through music. Notes may stir the soul, but it's the lyrics that pierce the heart.
 
 The popularity of jazz in its golden age owes much to the great American songbook. Writers such as Hoagy Carmichael, Cole Porter, and Irving Berlin created rich yet refined lyrical dramas. Singers including Sarah Vaughan, Ella Fitzgerald, and Jon Hendricks animated the lyrics and melodies with the improvisational spark of jazz. 
 
-A good lyricist is a poet, encapsulating a feeling in a concise slice of life. Here are fifteen of the top composers and the partner who wrote the lyrics. Irving Berlin was the one composer who exclusively wrote his own lyrics.
+Here are fifteen of the top composers and the partner who wrote the lyrics. Irving Berlin was the one composer who exclusively wrote his own lyrics.
 </div></div>
 
 <div class='tableauPlaceholder' id='viz1616374645922' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Po&#47;PopularityofJazzStandardsdashboard&#47;ComposersWhoWroteLyrics&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='PopularityofJazzStandardsdashboard&#47;ComposersWhoWroteLyrics' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Po&#47;PopularityofJazzStandardsdashboard&#47;ComposersWhoWroteLyrics&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1616374645922');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script></div>
 
 <div class='text'>
-	<h1>It's All About Me and You</h1>
-	What are common themes in jazz standards? Jazz lyrics speak of the troubles and triumphs of every day life, from sex to money, from cooking to drinking, from infidelity and abuse, to romantic love and sexual conquest. Some of the most common themes, found in the composition's titles, are about me, you, love, and feeling blue.
+	<h1>It's All About You and Me</h1>
+	Jazz lyrics speak of the troubles and triumphs of life, from sex to money, from cooking to drinking, romance and infidelity, to romantic love. Some of the most common themes, found in the composition's titles, are about me, you, love, and feeling blue.
 
 <div class='tableauPlaceholder' id='viz1616006928368' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Po&#47;PopularityofJazzStandardsdashboard&#47;PopularKeywords&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='PopularityofJazzStandardsdashboard&#47;PopularKeywords' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Po&#47;PopularityofJazzStandardsdashboard&#47;PopularKeywords&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1616006928368');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
